# nduka.alex-ojukwu.csc308-2

./: Cargo.toml  LICENSE  class7  class7.c  firstprogram.c  fourthclass  fourthclass.c  practical2.c  practical3  practical3.c  pratical1  pratical1.c  secondclass  secondclass.c  takeaway  takeaway.c  thirdclass  thirdclass.c
barest/src/: framebuffer.rs  main.rs
os_with_bootloader/: Cargo.toml  build.rs
os_with_bootloader/kernel_with_bootloader/: Cargo.toml
os_with_bootloader/kernel_with_bootloader/src/: main.rs
os_with_bootloader/kernel_with_bootloader/src/writer/: constants.rs  mod.rs  writer.rs
os_with_bootloader/src/: main.rs
practice/src/: main.rs
src/: framebuffer.rs  main.rs
